--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,41 @@
 @import "@fontsource/montserrat/600.css";
 @import "@fontsource/montserrat/700.css";
 @import "tailwindcss";
+@import "tailwindcss-animated";
 
 @theme {
     --font-display: "Montserrat", "sans-serif";
+    --animation-typing: typing 2s steps(20) infinite alternate, blink 0.7s infinite;
 }
+
+@keyframes typing {
+    from {
+        width: 0;
+        visibility: hidden;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
+    100% {
+        border-color: white;
+    }
+}
+
+@layer utilities {
+    .animate-typing {
+        animation: typing 2s steps(20) infinite alternate, blink 0.7s infinite;
+        overflow: hidden;
+        white-space: nowrap;
+        border-right: 2px solid white; /* pour le curseur */
+    }
+}
+
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -22,5 +53,37 @@ body {
     .md-no-bg-cover {
         background-size: cover !important;
     }
+}
+
+@keyframes bounce-in-edge {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.9); /* réduit légèrement à 90% */
+    }
+}
+
+.image-bounce-edge {
+    transition: transform 0.3s ease;
+}
+
+/* À appliquer quand on détecte le contact avec le bord */
+.image-bounce-edge.at-edge {
+    animation: bounce-in-edge 0.4s ease forwards;
+}
+
+@keyframes slide-in-from-left {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+.animate-slide-in-from-left {
+    animation: slide-in-from-left 500ms ease forwards;
 }
 
